--- a/styles/header.css
+++ b/styles/header.css
@@ -34,7 +34,7 @@ margin: 5px;
   display: flex;
   flex: 1;
   align-items: center;
-  align-items: space-between;
+  /* align-items: space-between; */
 }
 .search-bar {
   flex: 1;
