--- a/styles/home-page.css
+++ b/styles/home-page.css
@@ -1,7 +1,7 @@
 .home-page {
   background-color: rgb(242 240 241);
   position: relative;
-  height: 500px;
+  height: 542px;
   display: flex;
   flex-direction: row;
   padding-top: 70px;
@@ -72,13 +72,20 @@
 
 .designer-list {
   background-color: black;
-  height: 122px;
-  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 100px;
+  /* width: 100%; */
+  padding-right:100px;
+  padding-left: 100px;
+  gap: 150px;
 }
 
 .brand {
-  justify-content: center;
-  align-items: center;
-  height: 38px;
+  height: 25px;
+  width: 95px;
+  
+  
 }
 
