--- a/styles/header.css
+++ b/styles/header.css
@@ -13,7 +13,7 @@
 
   border-bottom-width: 1px;
   border-bottom-style: solid;
-  border-bottom-color: pink;
+  border-bottom-color: rgb(241, 238, 238);
 }
 
 .left-section {
